--- a/src/main/resources/static/css/student-list.css
+++ b/src/main/resources/static/css/student-list.css
@@ -300,7 +300,7 @@ body {
 
 #studentStatusFilter {
   position: relative;
-  z-index: 20000;
+  z-index: 10;
   overflow: visible;
 }
 
@@ -486,18 +486,18 @@ body {
     margin: 0 -0.5rem;
   }
 
-  .download-button-container {
+  /* .download-button-container {
     position: static;
     width: auto;
     margin-top: 10px;
     justify-content: flex-end;
     height: auto;
-    margin-right: 1rem;
+    margin-right: 0;
   }
 
   #downloadBtn {
     margin-right: 0;
-  }
+  } */
 
   .filter-control-group.checkbox-group,
   .filter-control-group {
@@ -587,18 +587,21 @@ body {
     width: 160px !important;
     max-width: 160px !important;
     min-width: 160px !important;
+    overflow: hidden;
   }
 
   #studentStatusFilter .multiselect-input {
     padding-right: 30px !important;
     width: 160px !important;
+    overflow: hidden;
   }
 
   #studentStatusFilter .dropdown-arrow {
     right: 12px !important;
+    overflow: hidden;
   }
 
-  .download-button-container {
+  /* .download-button-container {
     flex: 1 1 100%;
     justify-content: flex-start;
     margin-top: 5px;
@@ -607,7 +610,7 @@ body {
   #downloadBtn {
     width: auto;
     padding: 6px 12px;
-  }
+  } */
 
   .table tbody td {
     white-space: nowrap;
@@ -663,18 +666,21 @@ body {
     width: 150px !important;
     max-width: 150px !important;
     min-width: 150px !important;
+    overflow: hidden;
   }
 
   #studentStatusFilter .multiselect-input {
     padding-right: 30px !important;
     width: 150px !important;
+    overflow: hidden;
   }
 
   #studentStatusFilter .dropdown-arrow {
     right: 12px !important;
+    overflow: hidden;
   }
 
-  .download-button-container {
+  /* .download-button-container {
     width: 100%;
     justify-content: flex-start;
     margin-top: 5px;
@@ -683,7 +689,7 @@ body {
   #downloadBtn {
     padding: 6px 12px;
     font-size: 14px;
-  }
+  } */
 
   .action-cell .d-flex {
     flex-wrap: nowrap;
@@ -720,10 +726,12 @@ body {
 
   #studentStatusFilter .multiselect-input {
     padding-right: 40px !important;
+    overflow: hidden;
   }
 
   #studentStatusFilter .dropdown-arrow {
     right: 15px !important;
     font-size: 14px;
+    overflow: hidden;
   }
 }
